# python-packaging-setup-cfg-toml

./: README.md  setup.cfg  setup.py
src/package1/: main.py
