# setup.cfg
[metadata]
name = python_example
version= 1.1.0
author = Frank
author_email = 1yue8haogaoqi@gmail.com
description= Add a short description here!
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"
package_dir =
    =src

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    helloworld = package1.main:hello

[options.extras_require]
test = 
    pytest
    pytest-cov
    
[options.packages.find]
where = src
exclude = tests*